# applicant_employee_match

./: .gitignore  README.md  pyproject.toml
data/input/: applicants.csv  employees.csv
data/output/: matches.csv
python/: README.md  matching.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.sh
python/tests/: test_matching.py
src/applicant_employee_match/: README.md  matching.py
tests/: test_matching.py
