[project]
name = "applicant_employee_match"
version = "0.1"
description = "applicant employee match algorithm and app"
dependencies = [
    "pydantic==2.0.3",
    "flake8",
    "mypy",
    "pytest",
    "yapf",
    "pyproject-toml",
    "black",
    "ruff",
]

# [build-system]
# requires = ["setuptools >= 61.0.0"]
# build-backend = "setuptools.build_meta"

# [tool.setuptools.packages.find]
# where = ["src"]

[tool.mypy]
[[toolmypy.overrides]]
module = []
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
addopts = [
    "--import-mode=importlib",
]